test_translator/tests/data/checkpoint_2/core/pass/70_isclose_basic/tests.py
import math

assert math.isclose(approx(), 3.14, abs_tol=0.01)
