test_translator/tests/data/checkpoint_2/core/fail/72_isclose_both_tols/tests.py
import math

assert math.isclose(compute(), 1.0, abs_tol=0.001, rel_tol=0.01)
